[gd_scene load_steps=6 format=3 uid="uid://bujsvqtoyxuwm"]

[ext_resource type="Script" path="res://game_objects/Entities/Planet/PlanetNode.gd" id="1_ncqwx"]
[ext_resource type="Texture2D" uid="uid://bln5gk06ehdx7" path="res://resources/placeholder/placeholder_system.png" id="2_r4tr6"]
[ext_resource type="LabelSettings" uid="uid://cybnehxgdftn1" path="res://resources/Interface/map_name.tres" id="3_fn1as"]
[ext_resource type="PackedScene" uid="uid://bb7ugaicyjlhj" path="res://game_objects/Interface/Select/select.tscn" id="3_q5jcv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gk7ia"]
radius = 22.0907

[node name="PlanetNode" type="Node2D"]
script = ExtResource("1_ncqwx")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gk7ia")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
scale = Vector2(0.166667, 0.173333)
texture = ExtResource("2_r4tr6")

[node name="Label" type="Label" parent="."]
offset_left = 24.0
offset_top = -12.0
offset_right = 164.0
offset_bottom = 11.0
text = "Placeholder name"
label_settings = ExtResource("3_fn1as")

[node name="Select" parent="." instance=ExtResource("3_q5jcv")]
unique_name_in_owner = true
z_index = -1
position = Vector2(-9.53674e-07, 0)
rotation = -0.226893
scale = Vector2(0.0974453, 0.0966217)
script = null

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
